internal/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/invalid-backendref-filter.yaml
Addresses:
- service:
    hostname: httpbin.default.svc.cluster.local
    name: httpbin
    namespace: default
    ports:
    - servicePort: 8000
      targetPort: 80
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  gatewayName: default/example-gateway
  key: default-example-gateway-http
  name: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 8000
      service: default/httpbin.default.svc.cluster.local
    filters:
    - directResponse:
        body: VXNlci1hZ2VudDogKgpEaXNhbGxvdzogL2N1c3RvbQo=
        status: 200
    weight: 1
  hostnames:
  - www.example.com
  key: default.example-route.0.0.http
  listenerKey: default-example-gateway-http
  matches:
  - path:
      pathPrefix: /
  routeName: default/example-route
