internal/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/missing-ref.yaml
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  gatewayName: default/example-gateway
  key: default-example-gateway-http
  name: http
  protocol: HTTP
Routes:
- hostnames:
  - www.example.com
  key: default.example-route.0.0.http
  listenerKey: default-example-gateway-http
  matches:
  - path:
      exact: /non-existent
  routeName: default/example-route
