internal/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/overlapping-filters.yaml
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  gatewayName: default/example-gateway
  key: default-example-gateway-http
  name: http
  protocol: HTTP
Routes:
- filters:
  - requestRedirect:
      host: redirect.example.com
      status: 301
  hostnames:
  - www.example.com
  key: default.example-route.0.0.http
  listenerKey: default-example-gateway-http
  routeName: default/example-route
